# zfs

./: Makefile.am  configure.ac
.github/workflows/: zfs-buildtests.yml  zfs-tests-failing.yml  zfs-tests-functional-reftrack.yml  zfs-tests-functional.yml  zfs-tests-l2boom.yml  zfs-tests-qnd.yml  zfs-tests-sanity-reftrack.yml  zfs-tests-sanity.yml  zloop.yml
cmd/: Makefile.am  ztest.c
cmd/clonefile/: Makefile.am  clonefile.c
cmd/dobench/: Makefile.am  dobench.c
cmd/zdb/: Makefile.am  zdb.c  zdb_il.c
cmd/zfs/: zfs_main.c
cmd/zpool/: zpool_iter.c  zpool_main.c
cmd/zpool/zpool.d/: smart
cmd/zstream/: zstream_recompress.c  zstream_redup.c
cmd/ztest/: ztest.c
config/: Rules.am  ax_python_devel.m4  kernel-generic_io_acct.m4  kernel-vfs-iov_iter.m4  toolchain-simd.m4  zfs-build.m4
contrib/pyzfs/libzfs_core/test/: test_libzfs_core.py
include/: Makefile.am  deprecated_funcs.h  libzdb.h  libzfs.h  libzfs_core.h  zfeature_common.h  zfs_fletcher.h
include/os/freebsd/spl/sys/: simd_aarch64.h
include/os/freebsd/zfs/sys/: zfs_znode_impl.h
include/os/linux/kernel/linux/: blkdev_compat.h  mod_compat.h  simd_powerpc.h
include/os/linux/spl/sys/: sysmacros.h  taskq.h  uio.h
include/os/linux/zfs/sys/: zfs_ctldir.h  zfs_znode_impl.h  zpl.h
include/sys/: KeccakSponge.h  Makefile.am  arc.h  blake3.h  brt.h  config.h  dbuf.h  ddt.h  dmu.h  dmu_objset.h  dsl_crypt.h  kangarootwelve.h  spa.h  spa_impl.h  vdev_raidz_impl.h  zfs_context.h  zfs_ioctl.h  zfs_vnops.h  zfs_znode.h  zil.h  zio.h  zio_checksum.h  zio_compress.h  zio_impl.h
include/sys/fs/: zfs.h
include/sys/zstd/: zstd.h
lib/libicp/: Makefile.am
lib/libnvpair/: libnvpair.abi  libnvpair.c
lib/libshare/os/linux/: nfs.c
lib/libspl/include/sys/: simd.h
lib/libuutil/: libuutil.abi
lib/libzdb/: libzdb.c
lib/libzfs/: Makefile.am  libzfs.abi  libzfs_crypto.c  libzfs_dataset.c  libzfs_pool.c  libzfs_sendrecv.c  libzfs_status.c  libzfs_util.c
lib/libzfs/os/freebsd/: libzfs_compat.c
lib/libzfs/os/linux/: libzfs_sendrecv_os.c
lib/libzfs_core/: libzfs_core.abi  libzfs_core.c
lib/libzfsbootenv/: libzfsbootenv.abi
lib/libzpool/: Makefile.am  kernel.c
lib/libzstd/: Makefile.am
lib/libzutil/os/linux/: zutil_import_os.c
man/man4/: zfs.4
man/man5/: zpool-features.5
man/man7/: zfsprops.7  zpool-features.7
module/: Kbuild.in  Makefile.bsd
module/icp/: Makefile.in
module/icp/algs/blake3/: blake3.c  blake3_avx2.c  blake3_avx512.c  blake3_generic.c  blake3_impl.c  blake3_impl.h  blake3_neon.c  blake3_portable.c  blake3_sse2.c  blake3_sse41.c  blake3_x86-64.c
module/icp/algs/kangarootwelve/: KangarooTwelve.c  KeccakP-1600-times2-SIMD128.c  KeccakP-1600-times4-SIMD256.c  KeccakP-1600-times4-SnP.h  KeccakSponge.h  config.h
module/icp/algs/modes/: modes.c
module/icp/algs/skein/: skein.c  skein_block.c  skein_block_x64.S  skein_block_x64_2.S  skein_block_x64_4.S  skein_impl.h
module/icp/asm-aarch64/blake3/: b3_aarch64_sse2.S  b3_aarch64_sse41.S  blake3_neon.S
module/icp/asm-ppc64/blake3/: b3_ppc64_sse2.S  b3_ppc64_sse41.S  b3_ppc64le_sse2.S  b3_ppc64le_sse41.S
module/icp/asm-x86_64/blake3/: blake3_avx2.S  blake3_avx512.S  blake3_sse2.S  blake3_sse41.S
module/icp/core/: kcf_callprov.c
module/icp/io/: aes.c
module/icp/os/: modconf.c
module/os/freebsd/zfs/: sysctl_os.c  zfs_vnops_os.c  zfs_znode.c  zio_crypt.c
module/os/linux/spl/: spl-kmem-cache.c  spl-kstat.c  spl-taskq.c
module/os/linux/zfs/: zfs_ctldir.c  zfs_ioctl_os.c  zfs_vfsops.c  zfs_vnops_os.c  zio_crypt.c  zpl_ctldir.c  zpl_file.c  zvol_os.c
module/zcommon/: Makefile.in  zfeature_common.c  zfs_fletcher.c  zfs_fletcher_aarch64_neon.c  zfs_fletcher_aarch64_neon_unsafe.c  zfs_fletcher_avx512.c  zfs_fletcher_intel_intrin.c  zfs_fletcher_sse_intrin.c  zfs_fletcher_sse_intrin_unsafe.c  zfs_fletcher_superscalar.c  zfs_fletcher_superscalar4.c  zfs_fletcher_superscalar4.h  zfs_fletcher_superscalar4_simd.c  zfs_prop.c  zio_common.c  zpool_prop.c
module/zfs/: Makefile.in  arc.c  blake3_zfs.c  brt.c  btree.c  dbuf.c  ddt.c  ddt_zap.c  dmu.c  dmu_objset.c  dmu_send.c  dmu_traverse.c  dnode_sync.c  dsl_crypt.c  dsl_dataset.c  dsl_destroy.c  dsl_scan.c  gzip.c  gzip_simd.c  kangarootwelve_zfs.c  lz4_zfs.c  spa.c  spa_misc.c  vdev.c  vdev_queue.c  vdev_raidz.c  vdev_rebuild.c  zfeature_common.c  zfs_chksum.c  zfs_ioctl.c  zfs_log.c  zfs_quota.c  zfs_replay.c  zfs_vnops.c  zil.c  zio.c  zio_checksum.c  zio_compress.c  zvol.c
module/zfs/zlib-ng/: cpu_features.h  deflate.c  deflate_medium.c  functable.c  zbuild.h  zconf.h  zendian.h  zlib.h
module/zfs/zlib-ng/arch/x86/: x86_features.c
module/zstd/: Makefile.in  zfs_zstd.c
module/zstd/include/: zstd_compat_wrapper.h
rpm/generic/: zfs.spec.in
scripts/: Makefile.am  make_gitrev.sh  zfs-tests-color.sh  zloop.sh
tests/runfiles/: common.run  enc.run  enc2.run  linux.run  sanity.run
tests/zfs-tests/callbacks/: zfs_dbgmsg.ksh
tests/zfs-tests/cmd/draid/: draid.c
tests/zfs-tests/cmd/xattrtest/: xattrtest.c
tests/zfs-tests/include/: blkdev.shlib  libtest.shlib  properties.shlib
tests/zfs-tests/tests/: Makefile.am
tests/zfs-tests/tests/functional/alloc_class/: alloc_class_011_neg.ksh
tests/zfs-tests/tests/functional/checksum/: Makefile.am  blake3_test.c
tests/zfs-tests/tests/functional/fallocate/: fallocate_punch-hole.ksh
tests/zfs-tests/tests/functional/history/: history_002_pos.ksh
tests/zfs-tests/tests/functional/hole_birth/: Makefile.am  hole_birth.kshlib  hole_birth_4809.ksh
tests/zfs-tests/tests/functional/redacted_send/: redacted_negative.ksh  redacted_resume.ksh
tests/zfs-tests/tests/functional/refreserv/: setup.ksh
tests/zfs-tests/tests/functional/removal/: removal_with_send.ksh
tests/zfs-tests/tests/functional/reservation/: reservation_003_pos.ksh  reservation_005_pos.ksh  reservation_013_pos.ksh  reservation_014_pos.ksh  reservation_015_pos.ksh  reservation_016_pos.ksh  setup.ksh
tests/zfs-tests/tests/functional/rsend/: rsend_016_neg.ksh  send_invalid.ksh  send_partial_dataset.ksh
tmp/: do-benchmark.sh
(+29 files in other folders)
